--- a/app/src/main/res/layout/fragment_flavor.xml
+++ b/app/src/main/res/layout/fragment_flavor.xml
@@ -31,30 +31,40 @@
                     android:id="@+id/vanilla"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="@{viewModel.flavour.equals(@string/vanilla)}"
+                    android:onClick="@{() -> viewModel.set_flavour(@string/vanilla)}"
                     android:text="@string/vanilla" />
 
                 <RadioButton
                     android:id="@+id/chocolate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="@{viewModel.flavour.equals(@string/chocolate)}"
+                    android:onClick="@{() -> viewModel.set_flavour(@string/chocolate)}"
                     android:text="@string/chocolate" />
 
                 <RadioButton
                     android:id="@+id/red_velvet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="@{viewModel.flavour.equals(@string/red_velvet)}"
+                    android:onClick="@{() -> viewModel.set_flavour(@string/red_velvet)}"
                     android:text="@string/red_velvet" />
 
                 <RadioButton
                     android:id="@+id/salted_caramel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="@{viewModel.flavour.equals(@string/salted_caramel)}"
+                    android:onClick="@{() -> viewModel.set_flavour(@string/salted_caramel)}"
                     android:text="@string/salted_caramel" />
 
                 <RadioButton
                     android:id="@+id/coffee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="@{viewModel.flavour.equals(@string/coffee)}"
+                    android:onClick="@{() -> viewModel.set_flavour(@string/coffee)}"
                     android:text="@string/coffee" />
             </RadioGroup>
 
@@ -76,7 +86,7 @@
                 android:layout_marginTop="@dimen/side_margin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                android:text="@{@string/subtotal_price(viewModel.price)}"  />
+                android:text="@{viewModel.price.toString()}"  />
 
             <Button
                 android:id="@+id/next_button"
